--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -26,8 +26,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
 		<div class="container">
 			<div id="branding2">
@@ -126,8 +126,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -214,8 +214,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -302,8 +302,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -390,8 +390,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -448,8 +448,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -525,8 +525,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -613,8 +613,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -701,8 +701,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -789,8 +789,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -877,8 +877,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -934,8 +934,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1005,8 +1005,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1093,8 +1093,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1181,8 +1181,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1269,8 +1269,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1317,7 +1317,7 @@
 
 
 </div>
-<a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: black; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span></a>
+<a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: black; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span></a>
 <div class="question" id="Ad2">
   <div class="question_number">
     <h3>Advertisement</h3>
@@ -1325,8 +1325,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1916,6 +1916,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
