--- a/K53_Controls_Test/motorcycle_controls.html
+++ b/K53_Controls_Test/motorcycle_controls.html
@@ -26,8 +26,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
 	  <div class="container">
 			<div id="branding2">
@@ -125,8 +125,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -213,8 +213,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -301,8 +301,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -389,8 +389,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -444,8 +444,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -521,8 +521,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -609,8 +609,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -697,8 +697,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -785,8 +785,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -873,8 +873,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -930,8 +930,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1001,8 +1001,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1089,8 +1089,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1177,8 +1177,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1265,8 +1265,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1354,8 +1354,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1409,8 +1409,8 @@
   <div class="time_score">
 <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" 
    target="_blank" 
-   style="color: blue; text-decoration: none;">
-      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: blue"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: blue"> R150</span> Code 14: <span style="color: blue"> R300</span> 
+   style="color: black; text-decoration: none;">
+      🚦⚠️Get the exact <span id="month"></span> pdf Memo <span style="color: black"><br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span> 
 </a>
     <div class="container">
       <div id="branding">
@@ -1446,19 +1446,6 @@
 
 </div>
 
-    <div class="container">
-      <div id="branding5">
-        <a target="_blank" href="https://wa.me/27614150661/"><button onclick="CommentSection()"><img src="whatsapp1.png"> </button></a>
-      </div>
-    </div>
-
-
-
-    
-
-    <div  id='results8' style='text-align: center; margin-top: 20px;'>
-      <button  name='skipSubmit' type='submit' id="butInstall">ADD</button> 
-        </div>
 
 
 
@@ -1965,6 +1952,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
