--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -1317,7 +1317,7 @@
 
 
 </div>
-<a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: black; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month">January</span> pdf Memo <br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span></a>
+<a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo"     target="_blank"     style="color: black; text-decoration: none; margin: 5px;">       🚦⚠️Get the exact <span id="month"></span> pdf Memo <br> Code 08: 				<span style="color: black"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: black"> R150</span> Code 14: <span style="color: black"> R300</span></a>
 <div class="question" id="Ad2">
   <div class="question_number">
     <h3>Advertisement</h3>
@@ -1420,26 +1420,26 @@
     <div  id="results">
       <a href="light_vehicle_controls.html">Try again. Reload This Page</a><br> <br>
 	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R150
+      🚦Get the exact <span id="month"></span> pdf Memo R150
   </a>
     </div>
     <div  id="results2">
       <a href="test_code.html">Home Page</a><br> <br>
 	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R150
+      🚦Get the exact <span id="month"></span> pdf Memo R150
   </a>
     </div>
     <div  id="results3">
       <a href="light_vehicle_controls.html">Time Over. Reload This Page</a><br> <br>
 	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R150
+      🚦Get the exact <span id="month"></span> pdf Memo R150
   </a>
     </div>
     <div  id="results4">
       <a href="learn_lightvehicle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
       <a href="#"><button onclick="learn()">Skip</button></a><br> <br>
 	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R150
+      🚦Get the exact <span id="month"></span> pdf Memo R150
   </a>
     </div>
 </body>
@@ -1916,6 +1916,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
