--- a/K53_Controls_Test/motorcycle_controls.html
+++ b/K53_Controls_Test/motorcycle_controls.html
@@ -1456,26 +1456,26 @@
     <div  id="results">
       <a href="motorcycle_controls.html">Try again. Reload This Page</a><br> <br>
 	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R150
+      🚦Get the exact <span id="month"></span> pdf Memo R150
   </a>
     </div>
     <div  id="results2">
       <a href="test_code.html">Home Page</a><br> <br>
 	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R150
+      🚦Get the exact <span id="month"></span> pdf Memo R150
   </a>
     </div>
     <div  id="results3">
       <a href="motorcycle_controls.html">Time Over. Reload This Page</a><br> <br>
 	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R150
+      🚦Get the exact <span id="month"></span> pdf Memo R150
   </a>
     </div>
     <div  id="results4">
       <a href="learn_motorcycle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
       <a href="#"><button onclick="learn()">Skip</button></a><br> <br>
 	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month">January</span> pdf Memo R150
+      🚦Get the exact <span id="month"></span> pdf Memo R150
   </a>
     </div>
 </body>
@@ -1952,6 +1952,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
