--- a/K53_Controls_Test/light_vehicle_controls.html
+++ b/K53_Controls_Test/light_vehicle_controls.html
@@ -1397,19 +1397,7 @@
 
 </div>
 
-    <div class="container">
-      <div id="branding5">
-        <a target="_blank" href="https://wa.me/27614150661/"><button onclick="CommentSection()"><img src="whatsapp1.png"> </button></a>
-      </div>
-    </div>
-
-
-
     
-
-    <div  id='results8' style='text-align: center; margin-top: 20px;'>
-      <button  name='skipSubmit' type='submit' id="butInstall">ADD</button> 
-        </div>
 
 
 
@@ -1419,27 +1407,27 @@
 
     <div  id="results">
       <a href="light_vehicle_controls.html">Try again. Reload This Page</a><br> <br>
-	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month"></span> pdf Memo R150
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results2">
       <a href="test_code.html">Home Page</a><br> <br>
-	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month"></span> pdf Memo R150
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results3">
       <a href="light_vehicle_controls.html">Time Over. Reload This Page</a><br> <br>
-	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month"></span> pdf Memo R150
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
     <div  id="results4">
       <a href="learn_lightvehicle.html#p1" style="margin-right: 70px;"><button onclick="learn()">Learn</button></a>
       <a href="#"><button onclick="learn()">Skip</button></a><br> <br>
-	  <a href="https://wa.me/27614150661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;">
-      🚦Get the exact <span id="month"></span> pdf Memo R150
+	  <a href="https://wa.me/27614100661?text=Hi%2C%20Can%20I%20have%20the%20R150%20Learners'%20Memo" target="_blank" style="border: 1px solid #fff; padding: 5px;border-radius: 5px;font-size: 11px;">
+      🚦Get the exact <span id="month"></span> pdf Memo <br><br> Code 08: 				<span style="color: gold"> R200</span> Code 10: <span style="text-decoration: line-through;"> R250 </span> <span style="color: gold"> R150</span> Code 14: <span style="color: gold"> R300</span>
   </a>
     </div>
 </body>
@@ -1916,6 +1904,7 @@ document.querySelectorAll(".niches").forEach(el => {
 
   document.getElementById("month").textContent = months[monthIndex];
 </script>
+
 
 
 
